házi feladat elkeszitese

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,12 @@
     <title>Bella Richárd</title>
 </head>
 <body>
-    
+    <main>
+        <article>
+            <div class="urlap"></div>
+            <div class="lista"></div>
+        </article>
+        <footer>Bella Richárd</footer>
+    </main>
 </body>
 </html>
