tablazat megjelen, torles gombbal, +szerkesztes, gomb nelkül

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,7 @@
         <article>
             <div class="urlap"></div>
             <div class="lista"></div>
+            <div class="tarolo"></div>
         </article>
         <footer>Bella Richárd</footer>
     </main>
